# Globant-de-demo

./: .gitignore  .sample.env  README.md  docker-compose.yml  load_csv_data.py  main.py  pyproject.toml  read_avro.py
app/: api.py  config.py  crud.py  database.py  models.py  schemas.py  utils.py
backups/: departments.avro  hired_employees.avro  jobs.avro
