[tool.poetry]
name = "globant-demo"
version = "0.1.0"
description = ""
authors = ["Julio Contreras <julio.contreras0429@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
fastavro = "^1.9.4"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
avro-python3 = "^1.10.2"
pandas = "^2.2.2"

[tool.poetry.scripts]
start = "uvicorn.main:app --reload"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
